[FIX] Moderate Pages where visible for all Users

--- a/yafsrc/YetAnotherForum.NET/Content/forum.less
+++ b/yafsrc/YetAnotherForum.NET/Content/forum.less
@@ -107,7 +107,7 @@
         }
     }
 
-    .postdiv {
+    .yafnet div.postdiv {
         -ms-word-break: break-word;
         word-break: break-word;
     }
